# yocotto-url

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  redis.env
k8s/: redis-sts.yml  yocotto-url-dpl.yml  yocotto-url-svc.yml
openapi/: yocotto_url.yaml
tests/: test_yocotto_url.py
tests_e2e/: test_yocotto_url.py
yocotto_url/: __main__.py  application.py  datatypes.py  logging.py  operations.py  storage.py
yocotto_url/templates/: default_redirect.html  starting_page.html
